WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313794
[Site Isolation] http/tests/storage/storage-map-leaking.html
https://bugs.webkit.org/show_bug.cgi?id=313794
Summary
[Site Isolation] http/tests/storage/storage-map-leaking.html
Ryosuke Niwa
Reported
2026-04-30 18:20:14 PDT
http/tests/storage/storage-map-leaking.html fails with --site-isolation.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-04-30 18:48:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64018
EWS
Comment 2
2026-05-01 23:21:24 PDT
Committed
312472@main
(cf1df9607a49): <
https://commits.webkit.org/312472@main
> Reviewed commits have been landed. Closing PR #64018 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-01 23:22:11 PDT
<
rdar://problem/176076484
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug